k8s/deploy-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app
  name: app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app
  strategy:
    rollingUpdate:
      maxSurge: 150%
      maxUnavailable: 0%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - image: "us-central1-docker.pkg.dev/GCP_PROJECT/shinyay-container/demo-app:0.0.1"
          imagePullPolicy: Always
          name: app
