k8s/service-app-backend-config.yml
apiVersion: v1
kind: Service
metadata:
  name: app
  annotations:
    beta.cloud.google.com/backend-config: '{"default": "config-default"}'
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: app
  type: NodePort
