k8s/service-app.yml
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: app
  type: NodePort
